# htmlfmt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/: htmlfmt.py
